--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,40 @@ dso/dso/cyfunc*.so
 dep-repos/
 .*
 !/.gitignore
+!/.cursorignore
+
+# --- Added by modernization script ---
+# Python caches & tooling
+__pycache__/
+*.py[cod]
+*.pyo
+
+# Packaging / build artefacts
+build/
+dist/
+*.egg-info/
+.eggs/
+*.wheel
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+
+# Test & coverage artefacts
+.coverage
+htmlcov/
+.tox/
+.pytest_cache/
+.mypy_cache/
+
+# IDE / editor configs
+.idea/
+.vscode/
+
+# MkDocs generated site
+site/
+
+# OS generated files
+Thumbs.db
+.DS_Store
