--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ dist/
 *.wheel
 
 # Virtual environments
-.venv/
-venv/
+.venv
+venv
 ENV/
 
 # Test & coverage artefacts
@@ -56,3 +56,5 @@ site/
 # OS generated files
 Thumbs.db
 .DS_Store
+
+.cursorignore
