fix(warnings): fix 7 out of 17 warnings

--- a/configs/requirements/in_files/core.in
+++ b/configs/requirements/in_files/core.in
@@ -1,7 +1,7 @@
 # Core runtime dependencies for Deep Symbolic Optimization
 click
 colorama
-commentjson
+json5
 deap
 dill
 numba
@@ -15,4 +15,3 @@ seaborn
 sympy
 tqdm
 tensorflow
-tensorflow-addons
