--- a/configs/requirements/in_files/extras.in
+++ b/configs/requirements/in_files/extras.in
@@ -1,7 +1,7 @@
-gymnasium[box2d]>=0.29  # modern Gym fork
-stable-baselines3>=2.3
-pybullet>=3.2
-control>=0.9
+# For control tasks
+gymnasium[box2d,classic-control]>=1.0.0a1
+stable-baselines3>=2.0
+control
 
 # The following package is Linux-only
 # nvidia-cufile-cu12==1.11.1.6 ; platform_system != "Windows"
