--- a/dso_pkg/dso/config/config_common.json
+++ b/dso_pkg/dso/config/config_common.json
@@ -21,7 +21,7 @@
   // Hyperparameters related to the main training loop.
   "training": {
     // These parameters control the length of the run.
-    "n_samples": 2000000,
+    "n_samples": 300000,
     "batch_size": 1000,
 
     // To use the risk-seeking policy gradient, set epsilon < 1.0 and
